[package]
name = "blockstream"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
alloy = { version = "0.6.2", features = ["full"] }
chrono = "0.4.38"
env_logger = { version = "0.11.5", features = ["color"] }
futures-util = "0.3.31"
hex-literal = "0.4.1"
log = "0.4.22"
mongodb = "3.1.0"
regex = "1.11.0"
reqwest = "0.12.8"
serde = "1.0.210"
serde_yaml = "0.9.34"
tokio = "1.40.0"
